--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
         <li><a href="https://www.linkedin.com/in/zastafyeva/">LinkedIn</a></li>
         <li><a href="https://github.com/tragetraje">Github</a></li>
-        <li><a href="https://www.instagram.com/zastafyeva/">Instagram</a></li>
+        <li><a href="https://www.instagram.com/zinastafyeva/">Instagram</a></li>
         </ul>
         </div>
     </body>
